Estructura de carpetas y prueba de funcionamiento básico ok

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -7,7 +7,7 @@
 
 <!-- MAIN -->
     {% block main %}
-    <h1>HOLA MUNDO DOCKER</h1>
+    <h1>PROYECTO GASTOS VEHICULO</h1>
     {% endblock %}  
 
 <!-- FOOTER -->
