--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -6,12 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Los gastos de tu coche</title>
     <!-- LINKS -->
-    <link rel="stylesheet" href="
-    {{url_for('static', filename='css/reset.css')}}
-    ">
-    <link rel="stylesheet" href="
-    {{url_for('static', filename='css/main.css')}}
-    ">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/reset.css')}}">
+    <link href="https://fonts.googleapis.com/css?family=Lakki+Reddy&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/main.css')}}">
 </head>
 <body>
     <!-- HEADER -->
