html borrar y confirmardo borrar listos y funcionando

--- a/src/templates/borrar.html
+++ b/src/templates/borrar.html
@@ -2,14 +2,12 @@
 
 <!-- HEADER -->
     {% block header %}
-        {# aqui va el menu de navegación #}
         {% include "navegacion.html" %}
     {% endblock %}
         
 <!-- MAIN -->
     {% block main %}
-        {% include "formulario-nuevo.html" %}
-        {% include "listado.html" %}
+        {% include "formulario-borrar.html" %}
     {% endblock %}  
 
 <!-- FOOTER -->
