--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -2,11 +2,11 @@
 
 <!-- HEADER -->
     {% block header %}
-        {# esto es un comentario en jinja2 #}
+        {# aqui va el menu de navegación #}
         {% include "navegacion.html" %}
-        {% endblock %}
+    {% endblock %}
         
-        <!-- MAIN -->
+<!-- MAIN -->
     {% block main %}
         {% include "listado.html" %}
     {% endblock %}  
