--- a/src/templates/navegacion.html
+++ b/src/templates/navegacion.html
@@ -10,8 +10,8 @@
         <div class="navbar-nav">
             <a class="nav-item nav-link active" href="/">Home</a>
             <a class="nav-item nav-link" href="/nuevo">Nuevo</a>
-            <a class="nav-item nav-link" href="/buscar">Buscar</a>
-            <a class="nav-item nav-link" href="/mostrar">Todos</a>
+            <!-- <a class="nav-item nav-link" href="/buscar">Buscar</a> -->
+            <a class="nav-item nav-link" href="/mostrar-todos">Todos</a>
         </div>
     </div>
 </nav>
